GNOME Bugzilla – Bug 654669
Spelling suggestions not offered from Menu key
Last modified: 2011-07-26 08:20:20 UTC
Interestingly, right click brings up "Spelling Suggestions" in the context menu, but if the cursor is over a mispelt word (red squggle and all), pressing Menu on the keyboard brings up a context menu that does not include "Spelling Suggestions". It would be lovely if the context menu were the same in both cases. AfC
Nice catch !
That's because chat_input_populate_popup_cb() relies on the pointer position to find the word. It should be smarter and do it like GEdit which seems to get this right.
Created attachment 192156 [details] [review] patch http://cgit.collabora.com/git/user/danni/empathy.git/log/?h=populate-popup-654669 Annoyingly you can't seem to access the event that triggers populate-popup. This fix tracks whether the keyboard or the mouse generated the most recent event so we can decide which way to determine the position.
Review of attachment 192156 [details] [review]: ::: libempathy-gtk/empathy-chat.c @@ +2253,3 @@ + + default: + break; I know this should really never happen, but in that case you leave iter unset. I would either g_assert_if_reached() or set default to GDK_KEY_PRESS case.
g_assert_not_reached() even
Or g_warn_if_reached() so we don't crash right away (assuming we won't if we continue the execution)
Updated, it now defaults to the key-press case and warns when doing so.
good, please merge :)
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.