Populate spelling suggestions when menu key is pressed

Track what kind of event generated the populate-popup event and then use the
cursor position or mouse position as appropriate.

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=654669